gcc-14.2.0/gcc/testsuite/gdc.test/runnable/interface1.d
version https://git-lfs.github.com/spec/v1
oid sha256:b15df5a74c846a11e5700c679834aadbf466064660326bdcaa56bc98819f8292
size 3132
