gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/diag23384.d
version https://git-lfs.github.com/spec/v1
oid sha256:97cc484c6bf8c55292f68b0f1cef01a88e05cb921c5597be1d20f6cb4d7fbe54
size 613
